プロジェクトの種類（個人）を追加
